# flashtext2-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  shared.rs  trie.rs
tests/: test_keyword_processor.rs
